<resources>
    <string name="app_name">Crypto Market</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="wallet">Wallet</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_coin">CoinActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="market_capitalisation">Market Capitalizations</string>
    <string name="email_addess">info@thinkdevs.com</string>
    <string name="add_unit">ca-app-pub-8831705983843599/7843330965</string>
    <string name="no_connection">No connectivity</string>
    <string name="latest_news">Latest News</string>
    <string name="welcome_myTithe">Welcome to Crypto Market</string>
    <string name="email">Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="register_">Register</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_login">Login</string>
    <string name="minim_password">Password too short, enter minimum 6 characters!</string>
    <string name="my_wallet">My Wallet</string>
    <string name="logout_btn">Logout</string>
</resources>
